# codex-updater

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
src/: main.rs
systemd/: codex-updater.service
