[package]
name = "codex-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
flate2 = "1.1.9"
libc = "0.2.182"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.26.0"
